Oct 1, 2003

  * MODIFIED: XSD namespace declaration in rdf_db.pl to 
    http://www.w3.org/2001/XMLSchema#

Sep 30, 2003

  * FIXED: rdfs_find: every class is supposed to be a subclass of
    rdfs:Resource.  Cleanup of comment

Sep 29, 2003

  * ENHANCED: Store and reload MD5 using rdf_save_db and rdf_load_db for
    speedup of loading and (possible now) verify the integrety of a quick
    load triple file.

Sep 27, 2003

  * ADDED: 1st version of MD5 digest from loaded sources

Sep 24, 2003

  * ADDED: internal administration of triples associated with each source.
    Prolog based counting at the end if either very slow or not thread-safe.

Sep 23, 2003

  * FIXED: rdf_has(-, +, -).  Didn't use proper hash-key, missing
    sub-properties.

Sep 22, 2003

  * ADDED: rdf_reset_db/0 to clear the entire database.

Sep 21, 2003

  * ADDED: rdf_edit.pl: rdfe_register_ns/2 encapsulation of rdf_register_ns/2.

  * ADDED: rdfe_update/4 encapsulation of the new source action for
    rdf_update/4.

Sep 20, 2003

  * FIXED: Unification of source-location

  * ADDED: rdfe_assert/4 (encapsulating rdf_assert/4).

  * ADDED: rdf_update/5.  Allow changing the source data associated with
    a triple.

  * FIXED: Memory management problem in virtual property-hierarchy roots.

Sep 19, 2003

  * FIXED: rdf_update() to properly update the hash-table.

Sep 18, 2003

  * ADDED: timestamps to transaction journal commit operations.

  * ADDED: rdf_edit.pl: named transactions.

Sep 13, 2003

  * FIXED: rehashing on first access/change.

  * FIXED: goal expansion for rdf_retractall/[3,4].

  * ADDED: Handle predicates with multiple rdfs:subPropertyOf triples.

Sep 11, 2003

  * ENHANCED: Duplicate handling

Sep 10, 2003

  * FIXED: Undo/redo administration in rdf_edit.pl

Sep 8, 2003

  * FIXED: rollback in failed transactions.

Sep 4, 2003

  * FIXED: add goal-expansion to rdfe_retractall/3

Sep 2, 2003

  * ADDED: rdfe_transaction_member/2 to inspect actions inside a transaction.
